--- a/app/views/arguments/show.html.erb
+++ b/app/views/arguments/show.html.erb
@@ -14,7 +14,14 @@
 <p>
   <strong>User:</strong>
   <%= @argument.user.email %>
-</p>
+</p> 
 
+<p>
+  <strong>Pros:</strong>
+  <%= @argument.replies.all.count%>
+</p> 
+
+
+<%= link_to 'Add Pro', new_argument_path(reply: @argument.id) %>|  
 <%= link_to 'Edit', edit_argument_path(@argument) %> |
 <%= link_to 'Back', arguments_path %>
