--- a/app/views/arguments/show.html.erb
+++ b/app/views/arguments/show.html.erb
@@ -14,14 +14,28 @@
 <p>
   <strong>User:</strong>
   <%= @argument.user.email %>
-</p> 
+</p>
 
 <p>
   <strong>Pros:</strong>
-  <%= @argument.replies.all.count%>
-</p> 
+  <ul>
+    <% @argument.arguments.pro.each do |argument| %>
+      <li><%= link_to argument.title, argument %></li>
+    <% end %>
+  </ul>
+</p>
+
+<p>
+  <strong>Cons:</strong>
+  <ul>
+    <% @argument.arguments.con.each do |argument| %>
+      <li><%= link_to argument.title, argument %></li>
+    <% end %>
+  </ul>
+</p>
 
 
-<%= link_to 'Add Pro', new_argument_path(reply: @argument.id) %>|  
+<%= link_to 'Add Pro', new_argument_path(reply: @argument.id, reply_type: :pro) %>|
+<%= link_to 'Add Con', new_argument_path(reply: @argument.id, reply_type: :con) %>|
 <%= link_to 'Edit', edit_argument_path(@argument) %> |
 <%= link_to 'Back', arguments_path %>
