--- a/app/views/arguments/index.html.haml
+++ b/app/views/arguments/index.html.haml
@@ -4,15 +4,13 @@
   %thead
     %tr
       %th Title
-      %th Body
       %th User
       %th{:colspan => "3"}
   %tbody
     - @arguments.each do |argument|
       %tr
         %td= argument.title
-        %td= argument.body
-        %td= argument.user_id
+        %td= argument.user.email.split('@')[0]
 
         %td= link_to 'Show', argument
         - if policy(argument).edit?
@@ -21,3 +19,5 @@
           %td= link_to 'Destroy', argument, method: :delete, data: { confirm: 'Are you sure?' }
 %br/
 = link_to 'New Argument', new_argument_path
+
+=render 'nav'
