--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,6 +1,7 @@
 %h1 The Round Table
 - if current_user
   = link_to 'Sign out', destroy_user_session_path, method: :delete
+  = link_to 'New Argument', new_argument_path
 - else
   = link_to 'Sign in', new_user_session_path
   = link_to 'Sign up', new_user_registration_path
