--- a/app/views/arguments/show.html.haml
+++ b/app/views/arguments/show.html.haml
@@ -6,7 +6,7 @@
   = @argument.body
 %p
   %strong User:
-  = @argument.user.email.split('@')[0]
+  = @argument.user.full_name
 %p
   %strong Pros:
 %ul
