--- a/app/views/arguments/show.html.haml
+++ b/app/views/arguments/show.html.haml
@@ -40,10 +40,47 @@
     %link{:href => "https://fonts.googleapis.com/css?family=Inter", :rel => "stylesheet"}/
     %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", :rel => "stylesheet"}/   
 
-%body{:style => "height: 100vh; background-color: white;"}
+%body{:style => "height: 100vh; background-color: white"}
   .container.h-100.text-black.p-15
-    .row.h-100
-      .col
+    .row
+      .col.d-flex.justify-content-center
         .row
-          %h2{:style => "font-size: 50px"}
-            #{@argument.title}
+          .card.text-center.h-10
+            .card-body
+              %h5.card-title{:style => "font-size: 40px;"} #{@argument.title}
+              %h6.card-subtitle.mb-2.text-muted #{@argument.user.full_name}
+              %p.card-text Some quick example text to build on the card title and make up the bulk of the card's content.
+              %a.card-link{:href => edit_argument_path(@argument)} Edit
+              %a.card-link{:href => new_argument_path(reply: @argument.id, reply_type: :pro)} Add Pro
+              %a.card-link.mr-2{:href => new_argument_path(reply: @argument.id, reply_type: :con)} Add Con
+              / %a.card-link{:href => @argument, method: :delete, data: { confirm: 'Are you sure?' }} Destroy
+              = link_to ' Destroy', @argument, method: :delete, data: { confirm: 'Are you sure?' }
+            / %h2{:style => "font-size: 50px"}
+            /   #{@argument.title}
+    .row
+      .col
+
+        / .card.text-center.h-10.border-success.mt-5
+        /   .card-body.text-success
+        /     %h5.card-title{:style => "font-size: 20px;"}Pros
+        .alert.alert-success.mt-5{:role => "alert"}Pros
+        - @argument.arguments.pro.each do |argument|
+          .card.text-left.h-10
+            .card-body
+              %a.card-title{:href => "/arguments/#{argument.id}"}#{argument.title} 
+              %h6.card-subtitle.mb-2.text-muted #{@argument.user.full_name}
+              %p.card-text Some quick example text to build on the card title and make up the bulk of the card's content.
+              %a.card-link{:href => new_argument_path(reply: @argument.id, reply_type: :pro)} Delete
+      .col
+        .alert.alert-danger.mt-5{:role => "alert"}Cons
+        - @argument.arguments.con.each do |argument|
+          .card.text-left.h-10
+            .card-body
+              %a.card-title{:href => "/arguments/#{argument.id}"}#{argument.title} 
+              %h6.card-subtitle.mb-2.text-muted #{@argument.user.full_name}
+              %p.card-text Some quick example text to build on the card title and make up the bulk of the card's content.
+              %a.card-link{:href => new_argument_path(reply: @argument.id, reply_type: :pro)} Delete
+      
+
+
+
