--- a/app/views/arguments/new.html.haml
+++ b/app/views/arguments/new.html.haml
@@ -1,6 +1,22 @@
-%h1 New Argument
-= render 'form', argument: @argument
-= link_to 'Back', arguments_path
+/ %h2 New Argument
+/ = render 'form', argument: @argument
 
 
-=render 'nav'
+/ =render 'nav'
+
+
+
+%html
+  %head
+    %title Arguments index
+    %link{:href => "https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css", :rel => "stylesheet", :type => "text/css"}/
+    %link{:href => "https://fonts.googleapis.com/css?family=Inter", :rel => "stylesheet"}/
+    %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", :rel => "stylesheet"}/   
+
+%body{:style => "height: 100vh; background-color: white"}
+  .container.h-100.text-black.p-15.align-items-center
+    .row
+      .d-flex
+        .container.align-items-center
+          %h2 New Argument
+          = render 'form', argument: @argument
