--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -39,7 +39,7 @@
             %a.btn.btn-dark.my-2{href: arguments_path} Arguments 
               
       .col-6{:style => "background-color: black"}
-        .row.h-50.no-gutter
+        .row.h-50
           .container
             - if current_user
               = link_to 'Sign out', destroy_user_session_path, method: :delete
@@ -47,12 +47,12 @@
             - else
               %a.btn.btn-dark.float-right.my-2{href: new_user_session_path} Sign in 
               %a.btn.btn-dark.float-right.my-2.mr-2{href: new_user_registration_path} Sign up
-        .row.h-30.no-gutter
-        .row.align-self-center.justify-content-center
-          / %span.center{:style => "height: 100px; width: 100px; background-color: white; border-radius: 50%; display: inline-block;"}
+       
+        .row.h-50.align-self-center.justify-content-center
           .container.align-items-center            
             %h5.animate__animated.animate__fadeIn
               .d-flex.justify-content-center.text-center{:style => "font-size: 50px; color: white"} THE ROUND TABLE
               
 
-            
+/ .row.h-30.no-gutter.justify-content-center
+/ %span.center{:style => "height: 200px; width: 200px; background-color: white; border-radius: 50%; display: inline-block;"} 
