--- a/app/views/arguments/_form.html.haml
+++ b/app/views/arguments/_form.html.haml
@@ -21,7 +21,7 @@
 
 %html
   %head
-    %title Arguments index
+    %title Arguments form
     %link{:href => "https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css", :rel => "stylesheet", :type => "text/css"}/
     %link{:href => "https://fonts.googleapis.com/css?family=Inter", :rel => "stylesheet"}/
     %link{:href => "https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css", :rel => "stylesheet"}/   
