--- a/app/views/arguments/index.html.haml
+++ b/app/views/arguments/index.html.haml
@@ -11,30 +11,22 @@
       .col-9
         .row
           .container
-            %h2{:style => "font-size: 50px"}
+            %h2.mt-2{:style => "font-size: 50px"}
               Discussions
             %a.btn.btn-outline-dark.w-5{href: new_argument_path} New Argument
 
 
         .row 
-          .list-group.list-group-flush
+
+
+          .list-group.list-group-flush.p-15.mt-2          
             - @arguments.each do |argument|
-              %a.list-group-item.list-group-item-action.flex-column.align-items-start.p-10{href: "/arguments/#{argument.id}"}
-                .d-flex.w-100.justify-content-between  
-                  %h5.mb-1 #{argument.title}
-                  %small #{argument.user.full_name}
-                  %p.mb-5 id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.
-                  - if policy(argument).edit?
-                    %a{href: edit_argument_path(argument)}Edit
-                  - if policy(argument).edit?
-                    = link_to ' Destroy', argument, method: :delete, data: { confirm: 'Are you sure?' }
-          
-          - @arguments.each do |argument|
-            .list-group.list-group-flush.p-15
               .list-group-item.list-group-item-action.flex-column.align-items-start
                 .d-flex.w-100
-                  %a{href: "/arguments/#{argument.id}"} #{argument.title}    
-                %p.mb-5 id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.
+                %h5
+                  %a{href: "/arguments/#{argument.id}"} #{argument.title}
+                %small #{argument.user.full_name}
+                %p.mb-2 id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.
                 - if policy(argument).edit?
                   %a{href: edit_argument_path(argument)}Edit 
                 - if policy(argument).edit?
