--- a/app/views/arguments/_nav.html.haml
+++ b/app/views/arguments/_nav.html.haml
@@ -1,8 +1,17 @@
-%p 
+%nav.navbar.navbar-light.bg-light.py-3.mb-3
+  .container.p-15
+    %span.navbar-text.ml-15{:style => "font-size: 20px; color: Black"}
+      %strong THE ROUND TABLE
 
-- if current_user
-  = "#{current_user.first_name}"
-  %p
-  = link_to 'Sign out', destroy_user_session_path, method: :delete
-  %p
-%p
+    - if current_user
+      %span.navbar-text
+      #{current_user.first_name}
+      %p
+      / = link_to 'Sign out', destroy_user_session_path, method: :delete
+
+      %a.btn.btn-outline-dark.my-2.amy-lg-0{href: arguments_path} Sign Out
+
+      %p
+    - else 
+      %a.btn.btn-light.my-2.amy-lg-0{href: arguments_path} Sign In
+  	
