--- a/app/views/arguments/_nav.html.haml
+++ b/app/views/arguments/_nav.html.haml
@@ -1,11 +1,12 @@
 %nav.navbar.navbar-light.bg-light.py-3.mb-3
   .container.p-15
-    %span.navbar-text.ml-15{:style => "font-size: 20px; color: Black"}
+    %span.navbar-text{:style => "font-size: 20px; color: Black"}
       %strong THE ROUND TABLE
 
     - if current_user
-      %span.navbar-text
-      #{current_user.first_name}
+
+      %span.navbar-text.ml-auto.p-2
+      / #{current_user.first_name}
       %p
       / = link_to 'Sign out', destroy_user_session_path, method: :delete
 
@@ -13,5 +14,5 @@
 
       %p
     - else 
-      %a.btn.btn-light.my-2.amy-lg-0{href: arguments_path} Sign In
+      %a.btn.btn-outline-dark.my-2.amy-lg-0{href: arguments_path} Sign In
   	
