--- a/app/views/arguments/index.html.haml
+++ b/app/views/arguments/index.html.haml
@@ -31,7 +31,7 @@
                   %a.mr-2.badge.badge-pill.badge-primary{href: edit_argument_path(argument)}Edit 
                 - if policy(argument).destroy?
                   / %span.badge.badge-pill.badge-info.navbar-text{:style => "color: White"}
-                  /   = link_to 'Destroy', argument, method: :delete, data: { confirm: 'Are you sure?' }
+                  = link_to 'Destroy', argument, method: :delete, data: { confirm: 'Are you sure?' }
       .col-3{:style => "background-color: white"}
 
  
