Show page fixed

--- a/app/views/arguments/_nav.html.haml
+++ b/app/views/arguments/_nav.html.haml
@@ -1,4 +1,4 @@
-%nav.navbar.navbar-light.bg-light.py-3.mb-3
+%nav.navbar.navbar-light.bg-light.py-3
   .container.p-15
     %span.navbar-text{:style => "font-size: 20px; color: Black"}
       %strong THE ROUND TABLE
